Added div example, refactored the form

--- a/style.css
+++ b/style.css
@@ -32,3 +32,18 @@ button:hover {
   border: 2px solid red;
   transition: 0.3 s;
 }
+
+.error-text {
+  color: red;
+  margin: 0;
+}
+
+.square {
+  width: 100px;
+  height: 100px;
+}
+
+.green {
+  border: 1px solid black;
+  background-color: green;
+}
